components/MerkleTree.module.scss
//@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap');

.treeMainContainer{
    position: fixed;
    height: 100vh;
    width: 100vw;
    top: 0;
    background: #050a8f;
}

.treeTitleContainer {
    display: flex;
    justify-content: center;
    margin-bottom: 2rem;
    padding: 1rem;
    h1 {
        margin: 0;
        padding: 0;
        font-size: 4.5rem;
        font-family: 'Roboto Mono', monospace;
    }
}
.layerName {
    font-size: 2rem;
    text-align: center;
    margin: 0;
    padding: 0;
}

.layerContainer{
    margin-bottom: 1rem;
    
    .nodeContainer {
        display: flex;
        justify-content: center;
        align-items: center;
        padding: 0.1rem;
        width: 100%;
        margin: auto;

        .node{
            padding: 0;
            width: 3.4%;
            margin: 0.3rem;
            background: rgba(255, 255, 255, 0.8);

            
            p {
                white-space: nowrap;    
                padding: 0.1rem 0.4rem; 
                color: black;
                overflow: hidden !important;
                text-overflow: ellipsis;
                font-family: 'Roboto Mono', monospace;
                visibility: hidden;
            }

            .show {
                visibility: visible !important;
            }
        } 

        .root {
            border: 5px solid rgba(245, 20, 20, 0.772);
        }

        .highlight {
            border: 5px solid rgba(245, 144, 20, 0.772);
        }

        .highlightData{
            border: 5px solid rgba(29, 255, 4, 0.772);;
        }
    }

    &:nth-child(3){       
        .node {
            width: 30%;
            text-align: center;
        }
    }

    &:nth-child(4){       
        .node {
            width: 38%;
            text-align: center;
        }
    }

    &:nth-child(5){       
        .node {
            width: 20%;
            text-align: center;
        }
    }

    &:nth-child(6){       
        .node {
            width: 12.5%;
            text-align: center;
        }
    }

    &:nth-child(7){       
        .node {
            width: 6.8%;
            text-align: center;
        }
    }
}

.merkleNav {
    display: flex;
    align-items: center;

    div {
        margin: 0.2rem;
    }
}

.merkleNavButton {
    background: none;
    outline: none;
    border: none;

    &:hover {
        cursor: pointer;
    }
}

